Fixed search bar on mobile, added sliders and date to new list form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,7 @@
  *= require_self
  */
 @import "materialize";
+
+.dash-ask {
+  text-align: center;
+}
